# BitcoinC-Core

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  configure.ac  libparticlconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
build-aux/m4/: bitcoin_qt.m4
build_msvc/libbitcoin_qt/: libbitcoin_qt.vcxproj
contrib/: bitcoinc-qt.pro  gitian-build.py  gitian-build.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: gitian-bitcoinc-desktop.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: bitcoincd.service
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/seeds/: generate-seeds.py  nodes_main.txt  nodes_test.txt
doc/: Doxyfile.in  fuzzing.md  release-notes-bitcoinc.md  release-notes-particl.md  unit-tests.md
doc/man/: Makefile.am  bitcoinc-cli.1  bitcoinc-qt.1  bitcoinc-tx.1  bitcoincd.1  particl-tx.1  particld.1
doc/release-notes/: release-notes-0.15.0.2.md  release-notes-0.16.0.1.md  release-notes-0.17.0.1.md
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  anon.cpp  anon.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blind.cpp  blind.h  blockencodings.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsimport.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compressor.h  core_io.h  core_read.cpp  core_write.cpp  hash.h  httpserver.cpp  init.cpp  key_io.cpp  key_io.h  keystore.cpp  miner.cpp  (+17 more)
src/bench/: .gitignore  blind.cpp  block_assemble.cpp  ccoins_caching.cpp  mlsag.cpp  verify_script.cpp
src/config/: bitcoin-config.h
src/consensus/: merkle.cpp  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/insight/: csindex.h  insight.cpp  rpc.cpp  rpc.h
src/interfaces/: wallet.cpp  wallet.h
src/key/: extkey.cpp  extkey.h  keyutil.cpp  keyutil.h  mnemonic.cpp  mnemonic.h  stealth.cpp  stealth.h  types.h
src/policy/: feerate.cpp  policy.cpp
src/pos/: kernel.cpp  kernel.h  miner.cpp  miner.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  coincontroldialog.cpp  coincontroldialog.h  coldstakingdialog.cpp  coldstakingdialog.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  mnemonicdialog.cpp  mnemonicdialog.h  modaloverlay.cpp  networkstyle.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  peertablemodel.cpp  (+35 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  coldstakingdialog.ui  debugwindow.ui  editaddressdialog.ui  intro.ui  mnemonicdialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  stakingdialog.ui  transactiondescdialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_am.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cs_CZ.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_de_DE.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_AU.ts  bitcoin_en_GB.ts  bitcoin_en_US.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_419.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  (+68 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoinc.icns
src/qt/test/: Makefile  test_main.cpp  uritests.cpp
src/rpc/: anon.cpp  blockchain.cpp  client.cpp  mining.cpp  misc.cpp  mnemonic.cpp  net.cpp  rawtransaction.cpp  rpcutil.cpp  rpcutil.h  server.cpp
src/script/: bitcoinconsensus.cpp  interpreter.cpp  interpreter.h  particlconsensus.h  script.cpp  sign.cpp  sign.h  standard.cpp
src/secp256k1/src/modules/mlsag/: main_impl.h  tests_impl.h
src/smsg/: crypter.cpp  crypter.h  db.cpp  db.h  keystore.cpp  keystore.h  net.h  rpcsmessage.cpp  rpcsmessage.h  smessage.cpp  smessage.h
src/test/: bech32_tests.cpp  bitcoincchain_tests.cpp  ct_tests.cpp  extkey_tests.cpp  mnemonic_tests.cpp  ringct_tests.cpp  script_tests.cpp  sighash_tests.cpp  smsg_tests.cpp  stealth_tests.cpp  test_bitcoin.cpp  test_bitcoin.h  test_bitcoin_main.cpp
src/test/data/: sighash.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp
src/usbdevice/: debugdevice.cpp  debugdevice.h  ledgerdevice.cpp  ledgerdevice.h  rpcusbdevice.cpp  rpcusbdevice.h  trezordevice.cpp  trezordevice.h  usbdevice.cpp  usbdevice.h
src/wallet/: coinselection.h  db.cpp  feebumper.cpp  fees.cpp  hdwallet.cpp  hdwallet.h  hdwalletdb.cpp  hdwalletdb.h  init.cpp  rpcdump.cpp  rpchdwallet.cpp  rpchdwallet.h  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: hdwallet_test_fixture.cpp  hdwallet_test_fixture.h  hdwallet_tests.cpp  rpc_hdwallet_tests.cpp  rpc_wallet_tests.cpp  stake_tests.cpp  wallet_test_fixture.cpp  wallet_tests.cpp
test/functional/: feature_config_args.py  feature_includeconf.py  feature_ins_addressindex.py  feature_ins_csindex.py  feature_ins_spentindex.py  feature_ins_timestampindex.py  feature_ins_txindex.py  feature_part_anon.py  feature_part_blind.py  feature_part_coldstaking.py  feature_part_extkey.py  rpc_users.py  (+20 more)
(+6 files in other folders)
